# ministrace

./: CMakeLists.txt  README.md
scripts/compile/: gen_syscalls_table.py
src/: CMakeLists.txt  cli.c  cli.h  main.c
src/include/common/: error.h  str_utils.c  str_utils.h
src/trace/: tracing.c
src/trace/internal/: ptrace_utils.c  syscall_types.c  syscalls.c  unwind.c
src/trace/internal/arch/: ptrace_utils.c
test/: CMakeLists.txt  trace_descendants.c  trace_pthread_fork.c
